# cms-copilot-public

./: .env.example  .gitignore  README.md  langgraph.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: GA 报表「图文并茂 + 可执行 Todo」设计方案（LangChain create_agent + TodoListMiddleware + GA MCP + Recharts）.md  GA_MCP_REPORT_INTERPRETER_PROMPT.md  GA_PROMPTS_BUNDLE_MCP.md  SEO 周任务数据接口-增加排重.md  agent-chat-ui-params.md  design-system.ts  design_system_output.txt  frontend-recharts-integration.md  ga-mcp-tools.md  ga_skill_prompt.md  issues_report.md  keyword_clustering_algorithm.md  mcp_error_handling_refactor.md  mcp_report_ga_curl.md  mcp_site_setting_basic.md  plan.md  project_overview.md  refactor-plan.md  report_flow_analysis.md  shortcut_plan_execute.md  ui-components.md  video-script.md  workflows.md  项目功能说明文档.md
scripts/: mcp_lowcode_app.py  mcp_site_setting_basic_smoke.py  smoke_shortcut_v2.py  test_rag_api.py  test_rag_sse_events.py
src/agent/: __init__.py  config.py  graph.py  state.py
src/agent/insights/: __init__.py  report_insights_agent.py
src/agent/nodes/: __init__.py  article.py  entry.py  introduction.py  rag.py  report.py  router.py  seo.py  shortcut.py
src/agent/prompts/: report.py
src/agent/subgraphs/: __init__.py  article.py  report.py  shortcut.py
src/agent/tools/: __init__.py  article.py  auth.py  ga_mcp.py  lowcode_app.py  mcp_utils.py  (+3 more)
src/security/: auth.py
src/ui/: hooks.ts  index.tsx  react-shim.d.ts  styles.css  types.ts  ui.tsx
tests/: conftest.py  test.py
tests/InterruptHandler/: HITLInput.module.scss  HITLInput.tsx  SimpleInterruptOptions.module.scss  SimpleInterruptOptions.tsx  index.module.scss  index.tsx  types.ts  useInterruptedActions.ts  utils.ts
tests/integration_tests/: test_graph.py
(+32 files in other folders)
